# NoLanguageLeftWaiting

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SHARED_TASK_NOTES.md  compare_translation_approaches.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  run_head_detection.py  run_iteration16_experiments.py  run_iteration17_experiments.py  run_top_p_experiments.py  run_topp_tuning.py  run_xcomet_eval.py  run_xcomet_separate.py  speculative_decoding_v0.py  textual_interface.py  todo.md  translation_backend.py
configs/: adaptive-ssbd-en-zh.yaml  alignatt-en-zh-baseline.yaml  alignatt-vs-la.yaml  compare-backends-en-zh.yaml  compare-la-en-zh.yaml  context-injection-ab.yaml  dynamic-border-en-zh.yaml  entropy-veto-en-zh.yaml  entropy-veto-tuning.yaml  forced-decode-en-zh.yaml  full-sweep-en-fr.yaml  gaussian-kernel-sweep-en-zh.yaml  iwslt2026-cs-en.yaml  iwslt2026-en-de.yaml  iwslt2026-en-it.yaml  iwslt2026-en-zh.yaml  kv-cache-validation.yaml  la-optimizations-en-zh.yaml  per-direction-cs-en.yaml  per-direction-en-de.yaml  per-direction-en-it.yaml  per-direction-en-zh.yaml  ssbd-multidirection.yaml  ssbd-sweep-en-zh.yaml  sweep-aggregation-en-zh.yaml  sweep-bd-wb-en-zh.yaml
docs/brainstorms/: 2026-03-20-simulmt-research-forge-requirements.md
docs/ideation/: 2026-03-20-alignatt-simulmt-architecture-ideation.md
docs/plans/: 2026-03-20-001-feat-simulmt-research-forge-plan.md
docs/research/: drfrattn-analysis.md  flores-benchmark-results.md  gpe-exposst-analysis.md  gpu-e2e-results.md  head-transfer-results.md  iwslt2026-competition-intel.md  local-agreement-research.md  lsg-integration.md  novel-aggregation-research.md  reina-lsg-analysis.md  sota-simulmt-2026.md
nllw/: __init__.py  alignatt.py  alignatt_backend.py  alignatt_kvcache_backend.py  alignatt_la_backend.py  analysis.py  backend_protocol.py  baselines.py  bench.py  calibrate.py  complexity.py  core.py  corpus.py  detect_heads.py  eval.py  experiment.py  fusion.py  head_transfer.py  languages.py  llama_backend.py  lora.py  metrics.py  omnisteval.py  policies.py  prompts.py  research.py  simulate.py  simulstream.py  translation.py  xcomet_scorer.py
nllw/heads/: README.md  __init__.py  detect.py  hymt15_7b_universal.json  translation_heads_en_zh_eurollm.json  translation_heads_hymt1.8b_en_zh.json  translation_heads_qwen3.5_9b_en_de.json  translation_heads_qwen3_4b_cs_en.json  translation_heads_qwen3_4b_en_it.json  translation_heads_qwen3_8b_en_zh.json
nllw/heads/configs/: translation_heads_en_zh_tower.json  (+17 more)
scripts/: deploy_to_a40.sh  run_experiments.sh  run_iteration18_experiments.py  run_iteration19_experiments.py  run_iteration21_experiments.py  run_iteration22_experiments.py  run_iteration23_experiments.py  run_iteration24_experiments.py  run_iteration25_experiments.py  run_iteration26_experiments.py  run_iteration27_experiments.py  validate_competition.py
tests/: test_alignatt.py  test_alignatt_la.py  test_analysis.py  test_baselines.py  test_calibrate.py  test_complexity.py  test_corpus.py  test_detect_heads.py  test_eval.py  test_experiment.py  test_iteration10.py  test_iteration11.py  test_iteration12.py  test_iteration15.py  test_iteration16.py  test_iteration17.py  test_iteration18.py  test_iteration21.py  test_iteration23.py  test_iteration24.py  test_iteration25.py  test_iteration26.py  test_iteration27.py  test_iteration5.py  test_iteration6.py  test_iteration7.py  test_iteration8.py  test_iteration9.py  test_metrics.py  test_omnisteval.py  test_prompts.py  test_research.py  test_simulstream.py  test_ssbd.py
web_debug/: backend_wrapper.py  index.html  server.py  test_api.py
(+36 files in other folders)
